--- a/templates/loginview.html
+++ b/templates/loginview.html
@@ -187,7 +187,7 @@
                         {% endif %}
                         <p>{{ user.username }}</p>
                     </div>
-					<a class="dropdown-item" href="/upcoming-journeys" id="#">Upcoming Journeys</a>
+					<a class="dropdown-item" name="upcoming-journeys-link" href="/upcoming-journeys" id="#">Upcoming Journeys</a>
 					<a class="dropdown-item" href="/ongoing-journeys" id="#">Ongoing Trips</a>
 					<a class="dropdown-item" href="/history-journeys" id="#">History</a>
                     <a class="dropdown-item" href="/viewprofileT">View Profile</a>
