--- a/templates/ongoing_package_users.html
+++ b/templates/ongoing_package_users.html
@@ -177,39 +177,51 @@ tr:hover {
         <p>This is where you can manage users, packages, and ongoing trips.</p>
     </div>
     <div class="main-content">
-    <h1>History of Travel Packages</h1>
+    <h1>Users of Ongoing Travel Packages</h1>
     </div>
     
     <div class="table-container">
-        <div class="card-container">
-            {% if running_packages %}
-            {% for package in running_packages %}
-            <div class="card">
-                <a href="{% url 'history_passengers' package.id %}">
-                    <img src="{{ package.packageimage_set.first.image.url }}" class="card-img-top" alt="{{ package.package_name }} Image">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">{{ package.package_name }}</h5>
-                    <p class="card-text">{{ package.booking_deadline }} is the Last Date for Booking<br>{{ package.start_date }} is the Starting date.<br> {{ package.end_date }} is the end date.</p>
-                    <div class="star d-flex clearfix">
-                        <div class="mr-auto float-left">
-                            <span class="ion-ios-star"></span>
-                            <span class="ion-ios-star"></span>
-                            <span class="ion-ios-star"></span>
-                            <span class="ion-ios-star"></span>
-                            <span class="ion-ios-star"></span>
-                        </div>
-                        <!-- <div class="float-right">
-                            <span class="rate">{{ bookings.passenger_limit }} number of seats available. </span>
-                        </div> -->
-                    </div>
-                </div>
-            </div>
+
+    <div class="package-details">
+        <h1>{{ package.package_name }} Details</h1>
+        <p>Price: ₹{{ package.price }} per head</p>
+        <!-- Add other package details as needed -->
+    </div>
+<div class="booking-details">
+        <!-- package_requests.html -->
+  <main>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Package ID</th>
+                <th>Location</th>
+                <th>Package Name</th>
+                <th>Start Date</th>
+                <th>User Email</th>
+                <th>Passenger Details</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for booking in bookings %}
+                <tr>
+                    <td>{{ booking.package_id }}</td>
+                    <td>{{ booking.location }}</td>
+                    <td>{{ booking.package_name }}</td>
+                    <td>{{ booking.start_date }}</td>
+                    <td>{{ booking.user_email }}</td>
+                    <td><a href="{{ booking.passenger_details_url }}">View Details</a></td>
+                   
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="8">No bookings found.</td>
+                </tr>
             {% endfor %}
-            {% else %}
-            <div class="card">No History of Journeys to show</div>
-            {% endif %}
-        </div>
-        
+        </tbody>
+    </table>
+  </main>
+
+</div>
+
 </body>
 </html>
