--- a/templates/upcoming_journeys.html
+++ b/templates/upcoming_journeys.html
@@ -121,7 +121,7 @@
                 {% if user.is_authenticated %}
                     <form method="POST" action="{% url 'cancel_booking' package_id=package_with_images.package.id %}">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">Cancel Booking</button>
+                        <button type="submit" name="cancel" class="btn btn-danger">Cancel Booking</button>
                     </form>
                     {% if package_with_images.booking and package_with_images.booking.status == 'Confirmed' %}
                     <!-- Display a payment button only if the booking status is "Confirmed" -->
