--- a/templates/loginview.html
+++ b/templates/loginview.html
@@ -10,9 +10,7 @@
   <title>NIWITRAVELS</title>
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
- 
+
    <!-- Bootstrap JavaScript and Dependencies (jQuery and Popper.js) -->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
@@ -20,6 +18,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="{% static 'Niwi_Travels/images/favicon.ico' %}" type="image/x-icon">
   
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
 
  <link rel="stylesheet" href="{% static 'Niwi_Travels/css/open-iconic-bootstrap.min.css' %}"> 
@@ -187,7 +187,7 @@
                         {% endif %}
                         <p>{{ user.username }}</p>
                     </div>
-					<a class="dropdown-item" name="upcoming-journeys-link" href="/upcoming-journeys" id="#">Upcoming Journeys</a>
+					<a class="dropdown-item" href="/upcoming-journeys" id="#">Upcoming Journeys</a>
 					<a class="dropdown-item" href="/ongoing-journeys" id="#">Ongoing Trips</a>
 					<a class="dropdown-item" href="/history-journeys" id="#">History</a>
                     <a class="dropdown-item" href="/viewprofileT">View Profile</a>
@@ -374,9 +374,6 @@
                     <h3>
                         <a href="/package/{{ package.id }}">{{ package.package_name }}</a>
                     </h3>
-                    <span>Starting Date: {{ package.start_date }}</span><br>
-                    <span>End Date: {{ package.end_date }}</span>
-
 					<h3 style="background-color: rgb(199, 21, 71);">{{ package.booking_deadline }} is the Last Date for Booking</h3>
                     <div class="star d-flex clearfix">
                         <div class="mr-auto float-left">
